--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				 <ul class="submenu1">
 					<li><a href="primeralectura.html">LECTURA 1</a></li>
 					 <li><a href="segundalectura.html">LECTURA 2</a></li>
-		           
+		            <li><a href="terceralectura.html">LECTURA 3</a></li>
 				 </ul>
 				</li>
 				<li><a href="">MULTIMEDIA</a>
